<resources>
    <string name="app_name">Canciones Inglés</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Título:</string>
    <string name="titulo_hint">título de la canción</string>
    <string name="autor">Autor:</string>
    <string name="autor_hint">autor de la canción</string>
    <string name="genero">Género:</string>
    <string name="dificultad">Dificultad:</string>
    <string name="nombreFichero">Nombre Fichero:</string>
    <string name="nombreFichero_hint">nombre que identifica a todos los ficheros</string>
    <string name="acerca_de">Acerca De ...</string>
    <string name="texto_acercade">Esta aplicación ha sido desarrollada como Proyecto Final del <b>Master Desarrollo de Aplicaciones Móviles</b>.</string>
    <string name="texto_acercade_autores">Autores:</string>
    <string name="texto_acercade_autor1">Mario Gómez Sacedón</string>
    <string name="texto_acercade_autor2">Ana María Arrufat Sánchez</string>
    <string name="buscar">Buscar</string>
    <string name="editar">Editar</string>
    <string name="etiquetar">Etiquetar</string>
    <string name="borrar">Borrar</string>
    <string name="titulo_borrar">Borrar canción</string>
    <string name="mensaje_borrar_local">La canción se eliminará de la memoria local, ¿quiere continuar?</string>
    <string name="mensaje_borrar_remota">La canción se eliminará del servidor, ¿quiere continuar?</string>
    <string name="no_permiso_borrar">"No tiene permisos para borrar esta canción"</string>
    <string name="mensaje_borrar">¿Estas seguro que quieres eliminar esta canción?</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_cancion">Editar Canción</string>
    <string name="nueva_cancion">Nueva Canción</string>
    <string name="etiquetar_cancion">Etiquetar Canción</string>
    <string name="nuevo">Nueva Canción</string>
    <string name="titulo_nuevo">Insertar Canción</string>
    <string name="mensaje_nuevo">Para insertar una nueva canción necesitas guardar cuatro ficheros en la carpeta -cancionesingles- de la SD. Todos los ficheros se deberán nombrar con el texto introducido en Nombre Fichero sin espacios. Importante los txt se componen con el nombre de fichero seguido de original.txt o traducido.txt (Ejemplo yesterday: yesterday.mp3, yesterday.jpg, yesterdayoriginal.txt, yesterdaytraducido.txt</string>
    <string name="titulo_etiquetar">Etiquetado de Canción</string>
    <string name="mensaje_etiquetar">Debes indicar el inicio y final de cada frase pulsando el botón correspondiente. Es imprescindible que indiques el final de la frase!!. El inicio es opcional, en caso de no pulsar Ini se recalculara a partir del final de la frase</string>
    <string name="tiempo_ini">Ini</string>
    <string name="tiempo_fin">Fin</string>
    <string name="tiempo_start">Start</string>
    <string name="tiempo_repetir">Repetir</string>
    <string name="titulo_subtitulos">Subtitulos en Modo Normal</string>
    <string name="descripcion_subtitulos">Selecciona los subtitulos del modo normal</string>
    <string name="subtitulos_ambos">Ambos</string>
    <string name="subtitulos_original">Original</string>
    <string name="subtitulos_traducido">Traducido</string>
    <string name="titulo_alerta_etiquetado">Canción No Etiquetada</string>
    <string name="mensaje_alerta_etiquetado">Solo podrás reproducir el audio, para los subtitulos o los diferentes modos de reproducción es necesario etiquetar la canción.</string>
    <string name="normal">Normal</string>
    <string name="lectura">Lectura</string>
    <string name="repetir">Repetir</string>
    <string name="rellenar">Rellenar</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_tabbed">Canciones ingles</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="section_downloaded">Descargadas</string>
    <string name="section_availables">Disponibles</string>

    <string name="download">Descargar</string>
    <string name="upload">Subir</string>

    <string name="login_msg_email">Correo electrónico</string>
    <string name="login_msg_password">Contraseña</string>
    <string name="login_msg_signin">Iniciar sesión</string>
    <string name="login_msg_signup">Registrarse</string>
    <string name="error_connection_failed">Error, fallo en la conexión </string>
    <string name="error_google">Error al iniciar sesión con Google</string>
    <string name="error_empty">Por favor ingrese todos los campos</string>
    <string name="error_cancelled">Error, inicio de sesión cancelado</string>

    <!-- Navigation drawer menu-->
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="tabbed_activity">Canciones</string>
    <string name="preferences">Preferencias</string>


    <string name="facebook_application_id">133763073921647</string>
    <string name="facebook_login_protocol_scheme">fb133763073921647</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_rellenar_palabras">RellenarPalabrasActivity</string>


</resources>
