<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accion_editar"
        android:title="@string/editar"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="10"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/accion_subir"
        android:title="@string/upload"
        android:icon="@drawable/ic_action_upload"
        android:orderInCategory="12"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/accion_etiquetar"
        android:title="@string/etiquetar"
        android:icon="@drawable/ic_action_label"
        android:orderInCategory="15"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/accion_borrar"
        android:title="@string/borrar"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="20"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>