<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/AlertDialog.AppCompat.Light"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/texto_acercade" />
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/texto_acercade_autores"/>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="15dp"
        android:text="@string/texto_acercade_autor1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="15dp"
        android:text="@string/texto_acercade_autor2"
        android:textStyle="bold" />
</LinearLayout>