<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sacedonmg.cancionesingles.ListaCanciones">

    <item android:id="@+id/nuevo"
        android:title="@string/nuevo"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="5"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="10"
        app:showAsAction="always|withText"/>

    <item android:id="@+id/acercaDe"
        android:title="@string/acerca_de"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="15"
        app:showAsAction="ifRoom|withText"/>



</menu>
