<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:id="@+id/vista_cancion">

    <TextView
        android:id ="@+id/tituloCancion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="Título"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:lines="2"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/f_aux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"/>

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/portada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cancion"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/tituloCancion"/>

    <TextView
        android:id="@+id/f_original"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portada"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"/>
    <TextView
        android:id="@+id/f_traducida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/f_original"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/colorAccent"
        android:lines="2"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"/>

    <ImageButton
        android:id="@+id/bMicro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sePulsaMicro"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/mymicro"
        android:clickable="true"
        android:contentDescription="Habla"
        android:background="#ffffff"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="10dp"
        android:stretchColumns="*">
        <TableRow>
            <Button
                android:id="@+id/blectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sePulsaLectura"
                android:text="@string/lectura"
                android:background="@xml/miboton"
                style="@style/button_text"
                android:textSize="15dp" />


            <Button
                android:id="@+id/bnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sePulsaNormal"
                android:text="@string/normal"
                android:background="@xml/miboton"
                style="@style/button_text"
                android:textSize="15dp"
                />

            <Button
                android:id="@+id/brepetir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sePulsaRepetir"
                android:text="@string/repetir"
                android:background="@xml/miboton"
                style="@style/button_text"
                android:textSize="15dp"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>